# chaos-arena

./: .gitignore  README.md  damage-calculation-physics.md  game-design.md  glitch_saves_api_integration_-_saveManager_to_handle_save_strategies_by_plattform_-_perf.patch  index.html  package.json  pnpm-lock.yaml  vite.config.ts  wavedash.toml  worklog.md
.claude/: settings.local.json
.github/workflows/: ios-build.yml
perf/: probe.js  run.mjs
public/: manifest.json
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fastlane/: Appfile  Fastfile  Matchfile
src-tauri/plugins/tauri-plugin-levelplay/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-levelplay/android/: build.gradle.kts  settings.gradle
src-tauri/plugins/tauri-plugin-levelplay/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-levelplay/android/src/main/java/com/plugin/levelplay/: LevelPlayPlugin.kt
src-tauri/plugins/tauri-plugin-levelplay/ios/: Package.swift
src-tauri/plugins/tauri-plugin-levelplay/ios/Sources/tauri-plugin-levelplay/: LevelPlayPlugin.swift
src-tauri/plugins/tauri-plugin-levelplay/permissions/: default.toml  event-listener.toml
src-tauri/plugins/tauri-plugin-levelplay/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-levelplay/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-levelplay/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs
src/components/: StageBadge.vue
src/i18n/: campaign.ts  (+1 more)
(+62 files in other folders)
